--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Compiled class file
 *.class
+build
+out
 
 # Log file
 *.log
@@ -18,6 +20,11 @@
 *.zip
 *.tar.gz
 *.rar
+
+# project
+*.iml
+.idea
+.gradle
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
