--- a/build.gradle
+++ b/build.gradle
@@ -14,4 +14,5 @@ repositories {
 dependencies {
     testCompile 'junit:junit:4.12'
     testCompile 'org.assertj:assertj-core:3.11.0'
+    testCompile 'nl.jqno.equalsverifier:equalsverifier:3.1.10'
 }
