--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,8 @@ repositories {
 }
 
 dependencies {
+    compileOnly 'org.projectlombok:lombok:1.18.10'
+    annotationProcessor 'org.projectlombok:lombok:1.18.10'
     testCompile 'junit:junit:4.12'
     testCompile 'org.assertj:assertj-core:3.11.0'
     testCompile 'nl.jqno.equalsverifier:equalsverifier:3.1.10'
