--- a/build.gradle
+++ b/build.gradle
@@ -17,4 +17,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     testCompile 'org.assertj:assertj-core:3.11.0'
     testCompile 'nl.jqno.equalsverifier:equalsverifier:3.1.10'
+    testCompile 'org.mockito:mockito-all:1.9.5'
 }
