--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'com.adarshr.test-logger' version '2.0.0'
 }
 
 group 'org.toyrobot'
@@ -23,4 +24,8 @@ jar {
     manifest {
         attributes 'Main-Class': 'org.toyrobot.ToyRobotApp'
     }
+}
+
+testlogger {
+    theme 'mocha'
 }
